# ComputerSystemsProgrammerPrespectiveNotes

./: .gitignore  Makefile  README.md  book.toml  mstore.s  run  run.bash  shell.nix
code/: meson.build
code/02ch/: bit32.c  bitmasks.c  byte_ordering.c  expanding_bit.c  integer_arithmetic.c  meson.build  mstore.c  reverse_array.c  signed_vs_unsigned.c  vax_comp.c
code/03ch/: bst.c  exchange.s  hello.c  hello.s  main.c  mstore.c  objdump_prog.s  prog  unions.c
code/lib/: useful.c  useful.h
code/scheme/: integer_arithmetic.scm
src/: 01tour.md  02info_repr_manip.md  03machine_representation.md  06memory_hierarchy.md  08control_flow.md  SUMMARY.md  part01intro.md  part02intro.md  part03intro.md  tour.md
