executable(
  'byte_ordering',
  'byte_ordering.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'reverse_array',
  'reverse_array.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'bitmasks',
  'bitmasks.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'vax_comp',
  'vax_comp.c',
  link_with: [useful],
  include_directories: [INC],
)
