executable(
  'byte_ordering',
  'byte_ordering.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'reverse_array',
  'reverse_array.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'bitmasks',
  'bitmasks.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'vax_comp',
  'vax_comp.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'bit32',
  'bit32.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'expanding_bit',
  'expanding_bit.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'signed_vs_unsigned',
  'signed_vs_unsigned.c',
  link_with: [useful],
  include_directories: [INC],
)

executable(
  'integer_arithmetic',
  'integer_arithmetic.c',
  link_with: [useful],
  include_directories: [INC],
)
